# rdda_avatar

./: CMakeLists.txt  README.md  package.xml
include/rdda_interface/: rdda_interface.h
launch/: rdda_interface.launch  rdda_interface_launch.py
scripts/rdda_interface/: network_monitor.py
src/rdda_interface/: rdda_interface.cpp  shm.c
