<?xml version="1.0"?>
<package format="3">
  <name>rdda_interface</name>
  <version>0.0.1</version>
  <description>The rdda_interface package for ROS2 Humble </description>
  <maintainer email="abbas.a@northeastern.edu">Ali</maintainer>
  <license>TODO</license>

  <!-- ROS2 dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_srvs</depend>
  <depend>rdda_interfaces_types</depend>
  <depend>launch_ros</depend>
  <depend>rosidl_default_runtime</depend>
  <!-- <exec_depend>rdda_interfaces_types</exec_depend> -->
  
  <!-- Use ament_cmake instead of catkin -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
